samples/_failures_safe/1761142763_7a2dd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dbd2cbd.c:170: error: expected ‘;’, ‘,’ or ‘)’ at end of input
